add hero background, hero text, some icon and logo

--- a/index.html
+++ b/index.html
@@ -1,45 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"> <!--Pakai CSS biasa-->
-    <link href="/dist/output.css" rel="stylesheet"> <!--Pakai Tailwind-->
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <!--Pakai CSS biasa-->
+    <link href="/dist/output.css" rel="stylesheet" />
+    <!--Pakai Tailwind-->
     <title>Final Project Kelompok 3 (HTML CSS)</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <!-- HEADER & HERO START -->
+    <div class="hero-img h-screen bg-cover">
+      <div class="header-wrapper bg-transparent pt-5">
+        <div class="header-nav">
+          <div class="container mx-auto flex justify-between items-center">
+            <a href="" class="burger text-slate-900 relative w-[50px] h-[50px]">
+              <div
+                class="burger-icon absolute block h-[2px] top-[17px] bg-white w-5 left-1"
+              ></div>
+              <div
+                class="burger-icon absolute block h-[2px] top-[24px] bg-white w-5 left-1"
+              ></div>
+              <div
+                class="burger-icon absolute block h-[2px] top-[31px] bg-white w-5 left-1"
+              ></div>
+            </a>
 
+            <div class="logo">
+              <img class="h-5 w-6" src="img/hero-logo.png" alt="" />
+            </div>
+            <div class="site-nav flex">
+              <a href="">icon </a>
+              <a href="">icon </a>
+              <a href="">icon </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="hero-text-section pt-10">
+      <div class="container mx-auto">
+        <div class="title text-lg font-medium text-center">GOOD VIBRATIONS</div>
+        <div class="hero-text text-base font-light text-center">
+          The Good Vibration Capsule Series is more than just a collection of
+          apparel; it's a tribute to the legendary Screamous brand. Each piece
+          is a work of art, meticulously crafted to pay homage to the iconic
+          crown logo that has become synonymous with the brand. The bold and
+          asymmetric shapes found in each piece are a nod to the diagonal lines
+          of the crown, adding an extra layer of depth and meaning to the
+          design.
+        </div>
+      </div>
+    </div>
 
     <!-- HEADER & HERO END -->
-    
-
-
-
 
     <!-- MAIN CONTENT START -->
 
-
     <!-- MAIN CONTENT END -->
-
-
-
-
 
     <!-- SECOND CONTENT START -->
 
-
     <!-- SECOND CONTENT END -->
-
-
-
-
 
     <!-- FOOTER START -->
 
-
     <!-- FOOTER END -->
-</body>
+  </body>
 </html>
