remove some double tailwind syntax

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="hero-content w-full h-screen flex justify-center">
         <a
           href=""
-          class="button content-center my-auto text-white border bg-[#1f2021] py-3 px-5 font-medium"
+          class="button my-auto text-white border bg-[#1f2021] py-3 px-5 font-medium"
         >
           SHOP NOW
         </a>
@@ -80,11 +80,11 @@
 
     <div class="hero-text-section pt-32 text-slate-900">
       <div class="container mx-auto">
-        <div class="title text-lg font-medium text-center mb-2 text-3xl">
+        <div class="title font-medium text-center mb-2 text-3xl">
           GOOD VIBRATIONS
         </div>
         <div
-          class="hero-text text-base font-light text-center text-sm font-medium"
+          class="hero-text text-center text-sm font-medium"
         >
           The Good Vibration Capsule Series is more than just a collection of
           apparel; it's a tribute to the legendary Screamous brand. Each piece
