--- a/index.html
+++ b/index.html
@@ -1,45 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"> <!--Pakai CSS biasa-->
-    <link href="/dist/output.css" rel="stylesheet"> <!--Pakai Tailwind-->
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <!--Pakai CSS biasa-->
+    <link href="/dist/output.css" rel="stylesheet" />
+    <!--Pakai Tailwind-->
     <title>Final Project Kelompok 3 (HTML CSS)</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <!-- HEADER & HERO START -->
 
-
     <!-- HEADER & HERO END -->
-    
-
-
-
 
     <!-- MAIN CONTENT START -->
 
-
     <!-- MAIN CONTENT END -->
 
-
-
-
-
     <!-- SECOND CONTENT START -->
+    <!-- Container -->
+    <div id="container-secondcontent">
+      <!-- Start Description product -->
+      <div id="description-product" class="flex justify-center items-center py-11 px-8 max-md:flex-col max-md:5">
+        <!-- Sisipan Gambar  -->
+        <img src="https://cdn.shopify.com/s/files/1/1365/9261/files/DSCF7675_540x.jpg?v=1677780326" alt="Image-description" class="w-96 max-md:w-[45rem]" />
 
+        <!-- Description -->
+        <div class="p-8 pr-0 max-md:px-0">
+          <h2 class="font-semibold mb-3 text-lg">GOOD VIBRATIONS - CAPSULE SERIES</h2>
+          <p class="text-xs mb-3 font-medium">
+            After years of uncertainty, restrain,
+            <br />
+            <br />
+            and dismay - it&#8217;s time to celebrate a new beginning.
+            <br />
+            A moment to put the past behind and going forward
+            <br />
+            <br />
+            with new spirit in mind.
+            <br />
+            <br />
+            The hope of proclaiming the good and positive energy
+            <br />
+            is reflected in our latest collection, Good
+            <br />
+            Vibration. Bursting with vibrant colors and bold
+            <br />
+            graphics to represent the new beginning we keen to
+            <br />
+            embrace along with brand new clothing cuts to
+            <br />
+            <br />
+            represent the change in our society.
+            <br />
+            <br />
+            The start of a new chapter of our lives - a feeling, a
+            <br />
+            <br />
+            celebration, a good vibration.
+          </p>
+          <a href="#" class="bg-[#1f2021] text-[#f7f7f7] px-4 py-2 text-sm hover:opacity-75 transition cursor-pointer">Discover More...</a>
+        </div>
+      </div>
+
+      <!-- end Description product -->
+
+      <!-- Start Singel Product -->
+      <div id="product-singel" class="flex justify-center items-center px-6 max-md:flex-col pb-7 max-md:transition">
+        <!-- Sisipan Gambar -->
+        <img src="https://cdn.shopify.com/s/files/1/1365/9261/products/id-11134201-23020-9f4o5wqk0wnvf7_900x.jpg?v=1677755200" alt="Jaket Screamous" class="w-[30rem]" />
+        <!-- Detail Product -->
+        <div id="wrapper-detail-product-singel">
+          <h2 class="text-center mb-2">Screamous / Daily Wear</h2>
+          <h1 class="font-semibold text-center mb-2 text-3xl">
+            CAPSULE SERIES
+            <br />
+            Sweater Crewneck
+            <br />
+            MARCO GREEN
+          </h1>
+          <div id="wrapper-harga " class="flex justify-center pb-4">
+            <span class="pr-2 line-through decoration-1 font-bold">499.000</span>
+            <span class="text-red-500">225.000</span>
+          </div>
+          <hr class="w-10 border-2 border-black mx-auto" />
+          <div class="flex flex-col justify-around items-center">
+            <span class="my-3">Warna</span>
+            <span class="border border-black py-[0.10rem] px-2">Green</span>
+            <span class="py-2">Ukuran</span>
+            <ul class="flex justify-evenly w-10/12 text-[0.75rem] items-center my-4">
+              <li class="border border-black px-3 py-1 cursor-pointer hover:bg-slate-300">S</li>
+              <li class="border border-black px-3 py-1 cursor-pointer hover:bg-slate-300">M</li>
+              <li class="border border-black px-3 py-1 cursor-pointer hover:bg-slate-300">L</li>
+              <li class="border border-black px-3 py-1 cursor-pointer hover:bg-slate-300">XL</li>
+              <li class="border border-black px-3 py-1 cursor-pointer hover:bg-slate-300">XXL</li>
+            </ul>
+            <div class="flex flex-col justify-around h-28">
+              <button class="w-full border border-black decoration-1 py-2">Add To Chart</button>
+              <button class="bg-black text-white w-72 border hover:opacity-80 py-2">Buy It Now</button>
+            </div>
+            <span class="my-6 text-xs font-sans font-semibold text-orange-500 hover:text-black cursor-pointer">Full Detail -></span>
+          </div>
+        </div>
+      </div>
+
+      <!-- End Singel Product -->
+    </div>
 
     <!-- SECOND CONTENT END -->
 
-
-
-
-
     <!-- FOOTER START -->
 
-
     <!-- FOOTER END -->
-</body>
+  </body>
 </html>
