--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <!--Pakai CSS biasa-->
-    <link href="/dist/output.css" rel="stylesheet" />
+    <link href="dist/output.css" rel="stylesheet" />
     <!--Pakai Tailwind-->
     <title>Final Project Kelompok 3 (HTML CSS)</title>
   </head>
