Menambahkan cdn tailwind

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--Pakai CSS biasa-->
     <link href="dist/output.css" rel="stylesheet" />
     <!--Pakai Tailwind-->
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Final Project Kelompok 3 (HTML CSS)</title>
   </head>
   <body>
