--- a/index.html
+++ b/index.html
@@ -1535,8 +1535,8 @@
             </div>
             <div class="w-1/4 py-4 pl-20 " >
                 <p>&copy;2023, <a class="hover:text-gray-700" href="#">Screamous / Daily Wear</a></p>
-                <img src="/img/Screamous.jpg" alt="logo screamous" class="w-20 h-20 ml-36 mt-2">
-                <img src="/img/channel pembayaran.PNG" alt="channel pembayaran" >
+                <img src="img/Screamous.jpg" alt="logo screamous" class="w-20 h-20 ml-36 mt-2">
+                <img src="img/channel pembayaran.PNG" alt="channel pembayaran" >
             </div>
         </div>
     </footer>
